# magic-html

./: pyproject.toml
magic_html/: utils.py
magic_html/extractors/: base_extractor.py
